Fix: Marquee speed on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -230,7 +230,7 @@ button {
 .marquee-track {
   display: flex;
   width: fit-content;
-  animation: scroll-marquee 30s linear infinite;
+  animation: scroll-marquee 45s linear infinite;
   will-change: transform;
 }
 
@@ -285,7 +285,7 @@ button {
   }
 
   .marquee-track {
-    animation-duration: 25s;
+    animation-duration: 45s;
   }
 }
 
@@ -304,7 +304,7 @@ button {
   }
 
   .marquee-track {
-    animation-duration: 20s;
+    animation-duration: 45s;
   }
 }
 
